Users can now follow other users: provided new api paths and service methods for that, as well as updated the model. Deleted Converter.java, moved conversion classes to common Models Added password check to authentication process ConfirmationToken now stores a direct link to AppUser instead of an id Added hashtags: posters now store hashtags parsed from text. PosterService contains methods responsible for parsing hashtags. This will be improved in the future. Updated README.md Moved all registration logic from UserService to RegistrationService Numerous other minor improvements